Src/sqlite3win32stubs.bas

Private Declare Function sqlite3_status Lib "sqlite3win32.dll" (ByVal Code As Long, ByVal pCurrent As Long, ByVal pHighwater As Long, ByVal ResetFlag As Long) As Long
Private Declare Function sqlite3_status64 Lib "sqlite3win32.dll" (ByVal Code As Long, ByVal pCurrent As Long, ByVal pHighwater As Long, ByVal ResetFlag As Long) As Long
Private Declare Function sqlite3_step Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_stmt_busy Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_stmt_readonly Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_stmt_status Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal Code As Long, ByVal ResetFlag As Long) As Long
Private Declare Function sqlite3_strglob Lib "sqlite3win32.dll" (ByVal pzGlobPattern As Long, ByVal pzString As Long) As Long
Private Declare Function sqlite3_stricmp Lib "sqlite3win32.dll" (ByVal pzLeft As Long, ByVal pzRight As Long) As Long
Private Declare Function sqlite3_strlike Lib "sqlite3win32.dll" (ByVal pzPattern As Long, ByVal pzStr As Long, ByVal cEsc As Long) As Long
Private Declare Function sqlite3_strnicmp Lib "sqlite3win32.dll" (ByVal pzLeft As Long, ByVal pzRight As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_system_errno Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_table_column_metadata Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDbName As Long, ByVal pzTableName As Long, ByVal pzColumnName As Long, ByVal pzDataType As Long, ByVal pzCollSeq As Long, ByVal pNotNull As Long, ByVal pPrimaryKey As Long, ByVal pAutoinc As Long) As Long
Private Declare Function sqlite3_thread_cleanup Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_threadsafe Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_total_changes Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_trace Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnTrace As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_trace_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal uMask As Long, ByVal lpfnCallback As Long, ByVal pCtx As Long) As Long
Private Declare Function sqlite3_transfer_bindings Lib "sqlite3win32.dll" (ByVal hStmtFrom As Long, ByVal hStmtTo As Long) As Long
Private Declare Function sqlite3_update_hook Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnCallback As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_uri_boolean Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByVal pzParam As Long, ByVal bDefault As Long) As Long
Private Declare Function sqlite3_uri_int64 Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByVal pzParam As Long, ByVal bDefault As Currency) As Currency
Private Declare Function sqlite3_uri_parameter Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByVal pzParam As Long) As Long
Private Declare Function sqlite3_user_data Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_value_blob Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_bytes Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_bytes16 Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_double Lib "sqlite3win32.dll" (ByVal pValue As Long) As Double
Private Declare Function sqlite3_value_dup Lib "sqlite3win32.dll" (ByVal pOrig As Long) As Long
Private Declare Function sqlite3_value_free Lib "sqlite3win32.dll" (ByVal pOld As Long) As Long
Private Declare Function sqlite3_value_int Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_int64 Lib "sqlite3win32.dll" (ByVal pValue As Long) As Currency
Private Declare Function sqlite3_value_pointer Lib "sqlite3win32.dll" (ByVal pValue As Long, ByVal pzPType As Long) As Long
Private Declare Function sqlite3_value_numeric_type Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_nochange Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_subtype Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_text Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_text16 Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_text16be Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_text16le Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_value_type Lib "sqlite3win32.dll" (ByVal pValue As Long) As Long
Private Declare Function sqlite3_vfs_find Lib "sqlite3win32.dll" (ByVal pzVfs As Long) As Long
Private Declare Function sqlite3_vfs_register Lib "sqlite3win32.dll" (ByVal pVfs As Long, ByVal MakeDefault As Long) As Long
Private Declare Function sqlite3_vfs_unregister Lib "sqlite3win32.dll" (ByVal pVfs As Long) As Long
Private Declare Function sqlite3_vmprintf Lib "sqlite3win32.dll" (ByVal pzFormat As Long, ByVal va_list As Long) As Long
Private Declare Function sqlite3_vsnprintf Lib "sqlite3win32.dll" (ByVal n As Long, ByVal pzBuffer As Long, ByVal pzFormat As Long, ByVal va_list As Long) As Long
Private Declare Function sqlite3_vtab_collation Lib "sqlite3win32.dll" (ByVal pIdxInfo As Long, ByVal iCons As Long)
Private Declare Function sqlite3_vtab_nochange Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_vtab_on_conflict Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_wal_autocheckpoint Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal nFrame As Long) As Long
Private Declare Function sqlite3_wal_checkpoint Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDB As Long) As Long
Private Declare Function sqlite3_wal_checkpoint_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDB As Long, ByVal eMode As Long, ByVal pnLog As Long, ByVal pnCkpt As Long) As Long
Private Declare Function sqlite3_wal_hook Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnCallback As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_win32_is_nt Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_win32_mbcs_to_utf8 Lib "sqlite3win32.dll" (ByVal pzFilename As Long) As Long
Private Declare Function sqlite3_win32_set_directory Lib "sqlite3win32.dll" (ByVal DirectoryType As Long, ByVal pzValue As Long) As Long
Private Declare Function sqlite3_win32_set_directory8 Lib "sqlite3win32.dll" (ByVal DirectoryType As Long, ByVal pzValue As Long) As Long
Private Declare Function sqlite3_win32_set_directory16 Lib "sqlite3win32.dll" (ByVal DirectoryType As Long, ByVal pzValue As Long) As Long
Private Declare Function sqlite3_win32_sleep Lib "sqlite3win32.dll" (ByVal dwMilliseconds As Long) As Long
Private Declare Function sqlite3_win32_utf8_to_mbcs Lib "sqlite3win32.dll" (ByVal pzFilename As Long) As Long
Private Declare Function sqlite3_win32_write_debug Lib "sqlite3win32.dll" (ByVal pzBuffer As Long, ByVal nBuffer As Long) As Long

Public Function stub_sqlite3_aggregate_context(ByVal pCtx As Long, ByVal nBytes As Long) As Long
stub_sqlite3_aggregate_context = sqlite3_aggregate_context(pCtx, nBytes)
End Function

Public Function stub_sqlite3_aggregate_count(ByVal pCtx As Long) As Long
stub_sqlite3_aggregate_count = sqlite3_aggregate_count(pCtx)
End Function

Public Function stub_sqlite3_auto_extension(ByVal xEntryPoint As Long) As Long
stub_sqlite3_auto_extension = sqlite3_auto_extension(xEntryPoint)
End Function

Public Function stub_sqlite3_backup_finish(ByVal pBak As Long) As Long
stub_sqlite3_backup_finish = sqlite3_backup_finish(pBak)
End Function

Public Function stub_sqlite3_backup_init(ByVal pDest As Long, ByVal pzDestName As Long, ByVal pSrc As Long, ByVal pzSrcName As Long) As Long
stub_sqlite3_backup_init = sqlite3_backup_init(pDest, pzDestName, pSrc, pzSrcName)
End Function

Public Function stub_sqlite3_backup_pagecount(ByVal pBak As Long) As Long
stub_sqlite3_backup_pagecount = sqlite3_backup_pagecount(pBak)
End Function

Public Function stub_sqlite3_backup_remaining(ByVal pBak As Long) As Long
stub_sqlite3_backup_remaining = sqlite3_backup_remaining(pBak)
End Function

Public Function stub_sqlite3_backup_step(ByVal pBak As Long, ByVal nPage As Long) As Long
stub_sqlite3_backup_step = sqlite3_backup_step(pBak, nPage)
End Function

Public Function stub_sqlite3_bind_blob(ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
stub_sqlite3_bind_blob = sqlite3_bind_blob(hStmt, i, pzData, nData, lpfnDestroy)
End Function

Public Function stub_sqlite3_bind_blob64(ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Currency, ByVal lpfnDestroy As Long) As Long
stub_sqlite3_bind_blob64 = sqlite3_bind_blob64(hStmt, i, pzData, nData, lpfnDestroy)
End Function

Public Function stub_sqlite3_bind_double(ByVal hStmt As Long, ByVal i As Long, ByVal rValue As Double) As Long
stub_sqlite3_bind_double = sqlite3_bind_double(hStmt, i, rValue)
End Function

Public Function stub_sqlite3_bind_int(ByVal hStmt As Long, ByVal i As Long, ByVal iValue As Long) As Long
stub_sqlite3_bind_int = sqlite3_bind_int(hStmt, i, iValue)
End Function

Public Function stub_sqlite3_bind_int64(ByVal hStmt As Long, ByVal i As Long, ByVal iValue As Currency) As Long
stub_sqlite3_bind_int64 = sqlite3_bind_int64(hStmt, i, iValue)
End Function

Public Function stub_sqlite3_bind_null(ByVal hStmt As Long, ByVal i As Long) As Long
stub_sqlite3_bind_null = sqlite3_bind_null(hStmt, i)
End Function

Public Function stub_sqlite3_bind_parameter_count(ByVal hStmt As Long) As Long
stub_sqlite3_bind_parameter_count = sqlite3_bind_parameter_count(hStmt)
End Function

Public Function stub_sqlite3_bind_parameter_index(ByVal hStmt As Long, ByVal pzName As Long) As Long
stub_sqlite3_bind_parameter_index = sqlite3_bind_parameter_index(hStmt, pzName)
End Function

Public Function stub_sqlite3_bind_parameter_name(ByVal hStmt As Long, ByVal i As Long) As Long
stub_sqlite3_bind_parameter_name = sqlite3_bind_parameter_name(hStmt, i)
End Function

Public Function stub_sqlite3_bind_pointer(ByVal hStmt As Long, ByVal i As Long, ByVal pPtr As Long, ByVal pzPType As Long, ByVal lpfnDestroy As Long) As Long
stub_sqlite3_bind_pointer = sqlite3_bind_pointer(hStmt, i, pPtr, pzPType, lpfnDestroy)
End Function

Public Function stub_sqlite3_bind_text(ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
stub_sqlite3_bind_text = sqlite3_bind_text(hStmt, i, pzData, nData, lpfnDestroy)
End Function

Public Function stub_sqlite3_bind_text16(ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
stub_sqlite3_bind_text16 = sqlite3_bind_text16(hStmt, i, pzData, nData, lpfnDestroy)
End Function

Public Function stub_sqlite3_bind_text64(ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Currency, ByVal lpfnDestroy As Long, ByVal Encoding As Byte) As Long
stub_sqlite3_bind_text64 = sqlite3_bind_text64(hStmt, i, pzData, nData, lpfnDestroy, Encoding)
End Function

Public Function stub_sqlite3_bind_value(ByVal hStmt As Long, ByVal i As Long, ByVal pValue As Long) As Long
stub_sqlite3_bind_value = sqlite3_bind_value(hStmt, i, pValue)
End Function

Public Function stub_sqlite3_bind_zeroblob(ByVal hStmt As Long, ByVal i As Long, ByVal n As Long) As Long
stub_sqlite3_bind_zeroblob = sqlite3_bind_zeroblob(hStmt, i, n)
End Function
